Small addition to our page content

--- a/site/INDEX.html
+++ b/site/INDEX.html
@@ -4,6 +4,6 @@
 	<title>coursera test</title>
 </head>
 <body>
-<h1>The course on HTML, CSS ,JS</h1>
+<h1>The course about HTML, CSS ,JS</h1>
 </body>
 </html>
